layout bugfix. (users page)

--- a/css/style.css
+++ b/css/style.css
@@ -1498,9 +1498,10 @@ div.linksgroup div.site.hover a.del-site-btn{
 }
 #users .user {
 	display: inline-block;
-	float: left;
-	margin: 0 16px 30px 0;
+	vertical-align: top;
 	width: 100px;
+	margin-right: 10px;
+    margin-bottom: 2em;
 }
 #users .user .avatar {
 	width: 50px;
